# STINTSY-Order-of-Erin

./: README.md  codegen.py  make_stopwords_lut.py  pyproject.toml
experiments/: mlp.md
lib/: anal_ysis_tools.py  bag_of_words.py  janitor.py  lemmastem.py  lemmatize.py
lib/barn/: data_preparer.py  gs.py  trainer.py
notebooks/: bayes.ipynb  boilerplate.py  data.ipynb  eval.ipynb  multi_log_reg.ipynb  nn.ipynb  svm.ipynb
