[project]
name = "twitter-sentiment-project"
version = "0.1.0"
description = "Sentiment analysis project of Twitter (now X) posts. By Stephen Borja, Justin Ching, Erin Chua, and Zhean Ganituen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
]
