[project]
name = "twitter-sentiment-project"
version = "0.1.0"
description = "Sentiment analysis project of Twitter (now X) posts. By Stephen Borja, Justin Ching, Erin Chua, and Zhean Ganituen."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "docutils>=0.22.4",
    "en-core-web-sm",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.5",
    "imbalanced-learn<=0.41.1",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
